# hee

./: .ghci  .gitignore  .travis.yml  README.md  Rakefile  TODO.core  TODO.examples  TODO.runtime  bee.rb  build.sbt  hee.cabal  hee.hs  index.html  runtime.bee
attic/: TODO.core  TODO.examples  TODO.runtime  build.sbt  runtime.bee
attic/runtime/: bits.bee  boolean.bee  clist.bee  list.bee  option.bee  pair.bee  shuffle.bee
attic/scrap/: Checker.scala  Dictionary.hs  Existential.hs  Functor.hs  Geometry.hs  Phantom.hs  Tree.hs  Typing-Haskell-in-Haskell.hs  Vector.hs  fdep.hs  single-function-type-classes.hs
attic/scrap/examples/: luhn-mask.bee
attic/src/main/haskell/: Hee.hs
attic/src/main/haskell/Hee/: Classes.hs  Kinds.hs  Parser.hs  Repl.hs  Show.hs  Substitution.hs  Terms.hs  Test.hs  Types.hs
attic/src/main/ruby/lib/bee/: input.rb  interpreter.rb  parser.rb  syntax.rb
attic/src/main/ruby/lib/bee/primitives/: char.rb  float.rb  int.rb  string.rb
attic/src/main/scala/static/: Substitution.scala
attic/src/main/scala/terms/: BooleanLit.scala  LiteralTerm.scala  QuotationTerm.scala  Term.scala
attic/src/main/scala/types/: BottomType.scala  CharacterType.scala  ExistentialType.scala  MonomorphicType.scala  QuantifiedType.scala  StackType.scala  Type.scala  Variable.scala  VariableLike.scala
attic/src/test/scala/types/: universal.scala
blog/: Compilation-Targets.md  Strict-and-Lazy-Evaluation.md
examples/: accgen.bee  bottles.bee  collatz.hee  fibgen.bee  list.bee  recursion.bee  test.hee
examples/sicp/: 01-sum-of-squares.hee  02-abs.hee  03-sqrt-newtons-method.hee  04-factorial.hee  05-ackermann.hee  06-fibonacci.hee
project/: build.properties
project/plugins/: Plugins.scala
project/plugins/project/: build.properties
runtime/: __index__.bee  bits.bee  bool.bee  combinators.bee  eq.bee  list.bee  num.bee  number.bee  ord.bee  order.bee  ordering.bee  pair.bee  shuffle.bee
scrap/: Declaration-Syntax.hs  Do.hs  Existential.hs  Functor.scala  ListFunctor.java  Monad.hs  Phantom.hs  Records.hs  Structural-Recursion.hs  Typing-Haskell-in-Haskell.hs  leonidas.hs  list.rb
scrap/ct/: catamorphism.hs
scrap/lc/: Eval.hs  Parser.hs  QuasiExample.hs  QuasiLC.hs
src/Language/Hee/: Eval.hs  Parser.hs  Pretty.hs  Simplify.hs  Substitute.hs  Syntax.hs  Terms.hs  Types.hs  Unify.hs
src/main/haskell/: Kinds.hs  Repl.hs  SystemFw.hs  Terms.hs  Types.hs  Unification.hs
src/main/haskell/Hee/: Checker.hs  Classes.hs  Either.hs  Kinds.hs  Parser.hs  Show.hs  Stack.hs  Substitution.hs  Terms.hs  Test.hs  Types.hs  Unification.hs
src/main/ruby/lib/: bee.rb
src/main/ruby/lib/bee/: algebraic_type.rb  dictionary.rb  input.rb  interpreter.rb  primitives.rb  stack.rb  syntax.rb
src/main/ruby/lib/bee/primitives/: bits.rb  char.rb  float.rb  int.rb  string.rb
src/main/scala/com/github/kputnam/bcat/: Runtime.scala  (+1 more)
src/main/scala/kinds/: Kind.scala  TypeKind.scala
src/main/scala/nodes/: AbstractNode.scala  BooleanLit.scala  LiteralNode.scala  NameNode.scala  QuotationNode.scala  RootNode.scala  StringLit.scala  WordNode.scala
src/main/scala/parser/: TypeExpression.scala  ValueExpression.scala
src/main/scala/static/: Binding.scala  Context.scala  Substitution.scala  SymbolTable.scala
src/main/scala/terms/: NameTerm.scala  NumericLit.scala  StringLit.scala
src/main/scala/types/: BitmapType.scala  BooleanType.scala  ByteType.scala  ExistentialType.scala  MonomorphicType.scala  NumericType.scala  QuantifiedType.scala  RecursiveType.scala  Schema.scala  SkolemConstant.scala  StackType.scala  StringType.scala  Substitution.scala  TopType.scala  Type.scala  UniversalType.scala  Variable.scala  VariableLike.scala  VariantType.scala  WordType.scala
src/test/scala/types/: subsumption.scala
tests/: Main.hs  Properties.hs
tests/Language/Hee/Tests/: Arbitrary.hs  Syntax.hs  Unify.hs
wiki/: .Grammar.md.swp  Algebraic-Data-Types.md  Church.md  Concatenation.md  Declarations.md  Grammar.md  Inference.md  Lambda-Calculus.md  Macros.md  Optimizations.md  Polymorphism.md  Postfix.md  REPL.md  Symbols.md  Syntax.md  System-F-and-MLF.md  Transcript.md  unsound.md
wiki/examples/: binary-search.bee  ip->int.bee  test.bee  thinking-forth.bee  wind-data.bee
wiki/examples/haskell/: ord.hs
(+85 files in other folders)
