name:           hee
version:        0.0.0
cabal-version:  >= 1.14
license:        BSD3
license-file:   LICENSE.md
author:         Kyle Putnam <putnam.kyle@gmail.com>
maintainer:     Kyle Putnam <putnam.kyle@gmail.com>
homepage:       https://github.com/kputnam/hee
category:       Language
build-type:     Simple
synopsis:       Functional and concatenative programming language
description:
  Functional and concatenative programming language

executable hee-parse
  main-is: parse.hs

  hs-source-dirs: bin
  default-language: Haskell2010

  build-depends:
    hee,
    base >= 3 && < 5,
    text >= 0.11.2.3,
    attoparsec >= 0.10.2.0

executable hee-eval
  main-is: eval.hs

  hs-source-dirs: bin
  default-language: Haskell2010

  build-depends:
    hee,
    base >= 3 && <5,
    text >= 0.11.2.3,
    attoparsec >= 0.10.2.0

library
  hs-source-dirs: src
  default-language: Haskell2010

  build-depends:
    mtl >= 2.0.0,
    base >= 3 && <5,
    text >= 0.11.2.3,
    pretty >= 1.1.1.0,
    attoparsec >= 0.10.2.0,
    containers >= 0.4.0.0

  exposed-modules:
    Language.Hee.Eval
    Language.Hee.Syntax
    Language.Hee.Parser
    Language.Hee.Pretty
    Language.Hee.Substitute
    Language.Hee.Unify

test-suite main
  type: exitcode-stdio-1.0
  main-is: Main.hs

  hs-source-dirs: tests
  default-language: Haskell2010

  build-depends:
    hee,
    base >= 3 && <5,
    text >= 0.11.2.3,
    attoparsec >= 0.10.2.0,

    HUnit >= 1.2,
    QuickCheck >= 2.4,
    test-framework >= 0.6.1,
    test-framework-hunit >= 0.2.7,
    test-framework-quickcheck2 >= 0.2.8

source-repository head
  type:     git
  location: https://github.com/kputnam/hee
